--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <div class="text-base flex justify-items-center items-center">
         <button class="btn-login transition-all ease-in delay-400ms bg-white .btn rounded-[30px] py-[7px] px-[16px] hover:text-lightBlue">Login</button>
         <div class="hamburger transition-all delay-300 ml-2 pl-6 ease-out lg:hidden inline">
-        <button id=menu class="z-50 absolute top-6 right-3"><img src=images/menu.svg width=30 alt=menu></button>
-        <button id=cross class="z-50 absolute top-6 right-3 delay-300 transition-all ease-in"><img src=images/close.svg width=30 alt=close></button>
+        <button id="menu" class="z-50 absolute top-6 right-3"><img src=images/menu.svg width=30 alt=menu></button>
+        <button id="cross" class="z-50 absolute top-6 right-3 delay-300 transition-all ease-in"><img src=images/close.svg width=30 alt=close></button>
         </div>
         </div>
         </div></section>
