--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
         </div>
         </footer>
         
-        <script src=main.js></script>
+        <script src="main.js"></script>
 </body>
 
 </html>
+
